# auto-speakers

./: .gitignore  LICENSE  README.md  pyproject.toml  spkreg.py
Formula/: spkreg.rb
